force-app/main/default/objects/Encryption_Keys__mdt/Encryption_Keys__mdt.object-meta.xml
<CustomObject>
    <label>Encryption Keys</label>
    <pluralLabel>Encryption Keys</pluralLabel>
</CustomObject>