force-app/main/default/objects/Encryption_Keys__mdt/fields/E__c.field-meta.xml
<CustomField>
    <fullName>E__c</fullName>
    <label>E</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>