force-app/main/default/objects/Encryption_Keys__mdt/fields/K__c.field-meta.xml
<CustomField>
    <fullName>K__c</fullName>
    <label>K</label>
    <length>255</length>
    <type>Text</type>
</CustomField>