force-app/main/default/objects/Encryption_Keys__mdt/fields/key_id__c.field-meta.xml
<CustomField>
    <fullName>key_id__c</fullName>
    <label>key_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>