force-app/main/default/objects/Encryption_Keys__mdt/fields/L__c.field-meta.xml
<CustomField>
    <fullName>L__c</fullName>
    <label>L</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>