force-app/main/default/objects/Encryption_Keys__mdt/fields/phase__c.field-meta.xml
<CustomField>
    <fullName>phase__c</fullName>
    <label>phase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>