force-app/main/default/objects/Encryption_Keys__mdt/fields/POE_Public_K__c.field-meta.xml
<CustomField>
    <fullName>POE_Public_K__c</fullName>
    <label>Public K</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>